Reduced size of images to reduce page load time and fixed the padding bug in the captions of Frame components in blog posts.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -23,6 +23,7 @@
       @include wood.straight-grain-1-walnut-light-bg(45deg);
       border-radius: 50%;
 
+      max-width: 800px;
       
       .profilePic {
         //this portion centers the image horizontally and vertically to the parent element
