--- a/src/components/frame.module.scss
+++ b/src/components/frame.module.scss
@@ -31,6 +31,8 @@
     margin: 1em auto;
     padding: 0.5em;
 
+    line-height: normal;
+
     color: wood.$ebony-light0;
     font-weight: bold;
     text-align: center;
