Wrote my first post, added a date to the start of each blog post, and made all of my posts .mdx files to avoid allowing the same slug to appear for each file (since slugs are based on the filename, excluding the exension).

--- a/src/app/blog/post/[slug]/page.module.scss
+++ b/src/app/blog/post/[slug]/page.module.scss
@@ -25,6 +25,17 @@
     line-height: 2em;
   }
 
+  .date {
+    text-align: center;
+  }
+
+  hr {
+    width: 100%;
+    background: wood.$basswood-light0;
+    padding: 2px;
+    margin: 10px 0;
+  }
+
   //dont use h1 in article because only 1 h1 should be used per page
   .article {
     margin: 0 1em;
@@ -117,13 +128,6 @@
 
     ol li ol {
       font-size: 1em;
-    }
-
-    hr {
-      width: 100%;
-      background: wood.$basswood-light0;
-      padding: 2px;
-      margin: 10px 0;
     }
 
     //For Inline Code Only
