Added a default background and text to blog post cards with no thumbnails or cards whose thumbnail's won't load. Also added a note telling the user that there are no more posts on the bottom of each blog post if there are no other posts that can be recommended. Also added some more images to the the first blog post to make it more appealing.

--- a/src/components/blog-post-card.module.scss
+++ b/src/components/blog-post-card.module.scss
@@ -25,6 +25,14 @@
     height: 300px;
     object-fit: cover; //maintain aspect ratio and crop image if its too large
 
+    //used for when image does not load in or if there is no thumbnail image
+    background: wood.straight-grain-1-ebony-light();
+    line-height: 300px;
+    color: white;
+    text-align: center;
+    font-size: 1.2em;
+    white-space: nowrap;
+
   }
 
   .title {
