--- a/src/components/frame.module.scss
+++ b/src/components/frame.module.scss
@@ -31,7 +31,7 @@
     margin: 1em auto;
     padding: 0.5em;
 
-    line-height: normal;
+    line-height: 2em;
 
     color: wood.$ebony-light0;
     font-weight: bold;
